--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,16 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content">
+        <ion-header>
+            <ion-toolbar>
+                <ion-title>Menu</ion-title>
+            </ion-toolbar>
+        </ion-header>
+        <ion-content padding>
+            <ion-list inset>
+                <button menuClose ion-item (click)="gotologin();">
+                   TESTE
+                </button>
+            </ion-list>
+        </ion-content>
+    </ion-menu>
+    <ion-nav #content [root]="rootPage" swipeBackEnabled="false"></ion-nav>
+    
