--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,7 +39,7 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  verdinho: rgb(179, 240, 176)
+  verdinho: #0f8766
 );
 
 
